Added runaway stars ++

--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,7 @@ button:focus,
     }
     
 .projectimg {
-    /*position:absolute;*/
+    position:relative;
     right:10%;
     top:0px;
     width:80%;
